--- a/gpg.conf
+++ b/gpg.conf
@@ -16,6 +16,7 @@ personal-cipher-preferences AES256 AES192 AES CAST5
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
 cert-digest-algo SHA512
+s2k-digest-algo SHA512
 
 charset utf-8
 fixed-list-mode
